[package]
name = "rust_8080"
version = "0.1.0"
authors = ["thorben"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#minifb = "0.19.3"
minifb = "0.20.0"

#[dependencies.sdl2]
#version = "0.34"
#default-features = false
#features = ["gfx"]

[profile.release]
opt-level = 3
